syntax = "proto3";

package funding.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/funding/v1;fundingv1";

// FundingService 资金费率与融资服务
service FundingService {
    // GetFundingRate 获取当前资金费率
    rpc GetFundingRate(GetFundingRateRequest) returns (GetFundingRateResponse);
    
    // RequestMarginLoan 申请融资融券
    rpc RequestMarginLoan(RequestMarginLoanRequest) returns (RequestMarginLoanResponse);
    
    // RepayMarginLoan 偿还融资融券
    rpc RepayMarginLoan(RepayMarginLoanRequest) returns (RepayMarginLoanResponse);
    
    // GetLoans 获取用户的借记记录
    rpc GetLoans(GetLoansRequest) returns (GetLoansResponse);
}

message GetFundingRateRequest {
    string symbol = 1;
}

message GetFundingRateResponse {
    string symbol = 1;
    string funding_rate = 2; // e.g. "0.0001"
    google.protobuf.Timestamp next_funding_at = 3;
}

message RequestMarginLoanRequest {
    string user_id = 1;
    string asset = 2;
    string amount = 3;
}

message RequestMarginLoanResponse {
    string loan_id = 1;
    string status = 2;
}

message RepayMarginLoanRequest {
    string loan_id = 1;
    string amount = 2;
}

message RepayMarginLoanResponse {
    bool success = 1;
}

message LoanItem {
    string loan_id = 1;
    string asset = 2;
    string principal = 3;
    string interest = 4;
    string status = 5;
    google.protobuf.Timestamp created_at = 6;
}

message GetLoansRequest {
    string user_id = 1;
}

message GetLoansResponse {
    repeated LoanItem loans = 1;
}
